[package]
name = "log2"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "*"

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { version = "*", features = ["console"]}
wasm-bindgen = "*"
